# news-agent

./: .gitignore  README.md  render.yaml
agentic-py/: README.md  pyproject.toml
agentic-py/agents/common/: vector_store.py
agentic-py/agents/embedding_agent/: graph.py  state.py
agentic-py/agents/embedding_agent/nodes/embed_articles/: config.py  node.py  utils.py
agentic-py/agents/embedding_agent/nodes/extract_articles/: node.py
agentic-py/agents/retrieval_agent/: graph.py  state.py
agentic-py/agents/retrieval_agent/nodes/analyze_and_route_query/: node.py  prompts.py
agentic-py/agents/retrieval_agent/nodes/ask_more_info/: node.py  prompts.py
agentic-py/agents/retrieval_agent/nodes/conduct_research/: node.py
agentic-py/agents/retrieval_agent/nodes/construct_response/: node.py  prompts.py  schemas.py  utils.py
agentic-py/agents/retrieval_agent/nodes/general_conversation/: node.py  prompts.py
agentic-py/agents/retrieval_agent/sub_graphs/researcher_graph/: graph.py  state.py
agentic-py/agents/retrieval_agent/sub_graphs/researcher_graph/nodes/filter_chunks/: node.py
agentic-py/agents/retrieval_agent/sub_graphs/researcher_graph/nodes/generate_queries/: node.py  prompts.py  schemas.py
agentic-py/agents/retrieval_agent/utils/: utils.py
agentic-py/app/: main.py
agentic-py/app/api/routes/: articles.py  chat.py
agentic-py/app/core/: config.py  constant.py
agentic-py/app/models/: articles.py  chat.py
agentic-py/app/services/: embedding_service.py  scheduler_service.py
backend/: README.md  package.json  pnpm-lock.yaml  server.ts  tsconfig.json
(+61 files in other folders)
