[project]
name = "agentic-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramanshu Gawande",email = "ramanshu@nextcampus.in"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "redis (>=6.4.0,<7.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "news-please (>=1.6.15,<2.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "langchain-pinecone (>=0.2.12,<0.3.0)",
    "pyreadline3 (>=3.5.4,<4.0.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "crypto (>=1.4.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
